<resources>
    <string name="app_name">Adaptive Menu</string>

    <string name="title_activity_main_menu">MainMenuActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_shop">Shop</string>

    <string name="main_menu_button">main menu</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="welcome_text">Welcome Back</string>
    <string name="create_account_text">Create Account</string>

    <string name="sign_continue_text">Sign to Continue</string>
    <string name="create_continue_text">Create new Account</string>

    <string name="email_hint_text">Email</string>
    <string name="password_hint_text">Password</string>
    <string name="username_hint_text">Username</string>
    <string name="retype_hint_text">Retype Password</string>

    <string name="text_forgot_password">Forgot Password?</string>

    <string name="button_login_text">Login</string>
    <string name="button_create_account_text">Create Account</string>

    <string name="dont_account_text">Don\`t have an account?</string>
    <string name="already_have_account_text">Already have a account?</string>

    <string name="sign_up_text">Sign Up</string>
    <string name="login_text">Login</string>
</resources>